# rowforge

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/rowforge-studio/: .gitignore  HUMAN_SMOKE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
apps/rowforge-studio/src/: App.tsx  main.tsx
apps/rowforge-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/rowforge-studio/src-tauri/capabilities/: main.json
apps/rowforge-studio/src-tauri/icons/: icon.icns
apps/rowforge-studio/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  settings.rs  state.rs
apps/rowforge-studio/src-tauri/tests/: ipc_contract.rs
apps/rowforge-studio/src/__tests__/: active-runs-pill.test.tsx  attempt-detail-live.test.tsx  attempt-detail.test.tsx  cancel-dialog.test.tsx  event-tail.test.tsx  exec-detail.test.tsx  exec-list.test.tsx  export-dialog.test.tsx  failed-rows.test.tsx  lifecycle-banner.test.tsx  manifest-report-view.test.tsx  new-execution-wizard.test.tsx  phase-chip-bar.test.tsx  progress-region.test.tsx  replay-toggle.test.tsx  run-button.test.tsx  run-state.test.ts  settings-form.test.tsx  setup.ts  ui-error.test.ts  workspace-switch.test.tsx
apps/rowforge-studio/src/components/: ActiveRunsPill.tsx  Breadcrumb.tsx  CancelDialog.tsx  DeleteExecutionsDialog.tsx  DeleteHandlerDialog.tsx  ErrorsByCodeList.tsx  EventTail.tsx  ExportDialog.tsx  FailedRowsTable.tsx  ForkHandlerDialog.tsx  LastBuildSection.tsx  LifecycleBanner.tsx  LogsToolbar.tsx  LogsVirtualList.tsx  ManifestReportView.tsx  PhaseChipBar.tsx  ProgressRegion.tsx  RenameHandlerDialog.tsx  ReplayToggle.tsx  RerunFailedDialog.tsx  RollupCard.tsx  RowHistoryDrawer.tsx  RunButton.tsx  ScaffoldDialog.tsx  SettingsForm.tsx  SmokeSection.tsx  WorkspaceMenu.tsx  (+1 more)
crates/rowforge-cli/: Cargo.toml
crates/rowforge-cli/src/: exec_cmd.rs  exec_delete_cmd.rs  handler_build_cmd.rs  lib.rs  main.rs  pack_cmd.rs  run_cmd.rs
crates/rowforge-cli/tests/: cli_e2e.rs  exec_delete_cmd.rs  exec_export.rs  exec_run_build.rs  handler_build_cmd.rs  pack_e2e.rs
crates/rowforge-core/: Cargo.toml
crates/rowforge-core/src/: accumulator.rs  build.rs  cancel.rs  csv_io.rs  error.rs  execution_store.rs  export.rs  handler_log.rs  input_stream.rs  jsonl_writer.rs  lib.rs  manifest.rs  meta.rs  pool.rs  pool_streaming.rs  protocol.rs  reader.rs  rerun.rs  row_resolution.rs  run.rs  runtime.rs  worker.rs  worker_loop.rs  workspace.rs
crates/rowforge-core/tests/: failed_output_e2e.rs  handler_log_integration.rs  jsonl_durability.rs  only_row_ids.rs  pool_batch_cancel.rs  pool_batch_crash.rs  pool_batch_happy.rs  pool_batch_protocol_error.rs  skip_seqs.rs  startup_timeout.rs  stdout_log_lenient.rs  worker_handshake.rs  worker_loop_cancel_during_recv.rs  worker_loop_crash.rs
crates/rowforge-studio-core/: Cargo.toml
crates/rowforge-studio-core/src/: aggregator.rs  attempt_detail.rs  attempt_stream.rs  cache.rs  error.rs  events.rs  exec_detail.rs  exec_view.rs  failed.rs  handler.rs  ids.rs  lib.rs  manifest.rs  rollup.rs  row_history.rs  run.rs  run_handle.rs  session.rs  settings.rs  smoke.rs  workspace.rs
crates/rowforge-studio-core/src/handler_templates/empty/: handler.go.tpl  rowforge.yaml.tpl
crates/rowforge-studio-core/src/handler_templates/go_batch/: go.mod  handler.go.tpl  rowforge.yaml.tpl
crates/rowforge-studio-core/src/handler_templates/go_stdio/: handler.go.tpl  rowforge.yaml
crates/rowforge-studio-core/tests/: foundation.rs
crates/test-handler/: Cargo.toml
crates/test-handler/src/: main.rs
docs/spec/2026-05-18-rowforge/: README.md  part-1-overview.md  part-2-model.md  part-6-base.md
docs/spec/cli/: part-3-runtime.md  part-4-data.md  part-5-cli.md
docs/spec/studio/: README.md  part-1-overview.md  part-2-model.md  part-3-runtime.md  part-4-data.md  part-5-api.md  part-6-observability.md  part-7-ui.md  part-8-handler-authoring.md
docs/superpowers/plans/: 2026-05-24-studio-plan-01-foundation.md  2026-05-24-studio-plan-02-tauri-shell.md  2026-05-24-studio-plan-03-exec-history.md  2026-05-24-studio-plan-04-live-runs.md  2026-05-24-studio-plan-05-exec-lifecycle.md  2026-05-25-studio-plan-06-settings-polish.md  2026-05-25-studio-plan-07-handler-authoring-static.md  2026-05-25-studio-plan-08-handler-build.md  2026-05-25-studio-plan-09-handler-logs.md  2026-05-26-studio-plan-10-exec-delete.md  2026-05-26-studio-plan-11-rerun-failed.md  2026-05-26-studio-plan-12-handler-import-fork.md  2026-05-26-studio-plan-13-handler-smoke-test.md  2026-05-26-studio-plan-14-hard-cancel.md
docs/superpowers/specs/: 2026-05-19-rowforge-studio-mvp-design.md  2026-05-24-studio-plan-05-exec-lifecycle-design.md  2026-05-25-studio-plan-06-settings-polish-design.md  2026-05-25-studio-plan-07-handler-authoring-static-design.md  2026-05-25-studio-plan-08-handler-build-design.md  2026-05-25-studio-plan-09-handler-logs-design.md  2026-05-26-studio-plan-10-exec-delete-design.md  2026-05-26-studio-plan-11-rerun-failed-design.md  2026-05-26-studio-plan-12-handler-import-fork-design.md  2026-05-26-studio-plan-13-handler-smoke-test-design.md  2026-05-26-studio-plan-14-hard-cancel-design.md
examples/: README.md  sample.csv
examples/handlers/golang-uppercase/: README.md  go.mod  handler.go  rowforge.yaml
examples/handlers/python3-uppercase/: README.md  handler.py  requirements.txt  rowforge.yaml
examples/handlers/raw-protocol-python/: README.md  handler.py  rowforge.yaml
sdks/go/: README.md  batch.go  batch_test.go  go.mod  protocol.go  run.go  run_test.go
sdks/python/: README.md  pyproject.toml
sdks/python/rowforge_handler/: __init__.py  _batch.py  _protocol.py
sdks/python/tests/: test_run.py  test_run_batch.py
(+58 files in other folders)
