[workspace]
resolver = "2"
members = [
    "crates/rowforge-core",
    "crates/rowforge-cli",
    "crates/test-handler",
]

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/lemotw/rowforge"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
assert_cmd = "2"
zip = "2"
ulid = "1"
fs2 = "0.4"
dirs = "5"
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
