[workspace]
resolver = "2"
members = [
    "crates/rowforge-core",
    "crates/rowforge-cli",
    "crates/rowforge-studio-core",
    "crates/test-handler",
    "apps/rowforge-studio/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/lemotw/rowforge"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
dirs = "5"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
which = "6"
zip = "2"
