[package]
name = "rowforge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "rowforge_cli"
path = "src/lib.rs"

[[bin]]
name = "rowforge"
path = "src/main.rs"

[dependencies]
rowforge-core = { path = "../rowforge-core" }
rowforge-studio-core = { path = "../rowforge-studio-core" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
tempfile.workspace = true
dirs.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
