[package]
name = "rowforge-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
csv.workspace = true
tracing.workspace = true
sha2.workspace = true
chrono.workspace = true
tempfile.workspace = true
tokio-util.workspace = true
rusqlite.workspace = true
ulid.workspace = true
fs2.workspace = true
dirs.workspace = true
which.workspace = true

[dev-dependencies]
filetime = "0.2"
tempfile.workspace = true
