[package]
name = "rowforge-studio-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rowforge-core = { path = "../rowforge-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
filetime = "0.2"
