[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rowforge-handler"
version = "0.1.0"
description = "Handler SDK for rowforge — write a function, skip the JSON-Lines protocol."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["rowforge_handler*"]
