[package]
name = "rowforge-studio"
version = "0.1.0"
description = "rowforge Studio (Tauri shell)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "rowforge_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
rowforge-studio-core = { path = "../../../crates/rowforge-studio-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
